<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/coinsMenuFragment">
    <fragment
        android:id="@+id/coinsMenuFragment"
        android:name="com.hxl.coinfuse.ui.fragments.coins.main.CoinsMenuFragment"
        android:label="fragment_coins_menu"
        tools:layout="@layout/fragment_coin_menu" />

    <fragment
        android:id="@+id/bookmarksFragment"
        android:name="com.hxl.coinfuse.ui.fragments.bookmarks.BookmarksFragment"
        android:label="fragment_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />
    <fragment
        android:id="@+id/exchangeFragment"
        android:name="com.hxl.coinfuse.ui.fragments.exchanges.ExchangeFragment"
        android:label="ExchangeFragment"
        tools:layout="@layout/fragment_exchange"/>
    <fragment
        android:id="@+id/profitCalculatorFragment"
        android:name="com.hxl.coinfuse.ui.fragments.profit_cal.ProfitCalculatorFragment"
        android:label="ProfitCalculatorFragment"
        tools:layout="@layout/fragment_profit_calculator"/>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.hxl.coinfuse.ui.fragments.settings.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>