<resources>
    <string name="app_name" translatable="false">CoinFuse</string>

    <!-- Welcome -->
    <string name="btn_next">Next</string>
    <string name="btn_get_started">Get Started</string>
    <string name="tv_skip">Skip</string>
    <!-- Walk-through -->
    <!-- Titles -->
    <string name="title_welcome">Welcome</string>
    <string name="title_explore">Explore</string>
    <string name="title_analyze">Analyze</string>
    <!-- Descriptions -->
...
    <string name="desc_explore">Price History, Markets &amp; Latest changes of every Crypto Currency.</string>
    <string name="desc_analyze">Data in easy and compact readable way &amp; share latest information with your friends.</string>

    <!-- Menu -->
        <!-- Navigation Fragment -->
    <string name="menu_coins">Coins</string>
    <string name="menu_exchanges">Exchanges</string>
    <string name="menu_profit">Profit</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_setting">Settings</string>
        <!-- Exchange Details -->
    <string name="menu_website">Website</string>

    <!-- Coins menu -->
    <string name="sort_by">Sort by</string>
...
    <string name="profit_n_loss">Profit/Loss</string>
    <string name="profit_investment_total">Total Investment</string>
    <string name="profit_exit_total">Total Exit</string>

    <!-- Settings -->
    <string name="settings_preferences">Preferences</string>
        <string name="pref_theme">Theme</string>
        <string name="pref_language">Language</string>
    <string name="settings_storage">Storage</string>
        <string name="storage_clear_cache">Clear Cache</string>
        <string name="storage_clear_bookmarks">Clear Bookmarks</string>
        <string name="storage_clear_history">Clear Search History</string>
        <string name="storage_clear_storage">Clear Storage</string>
    <string name="settings_info">Info</string>
...
